--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,16 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
+
 <body>
+
+  <main>
+
+    <div class="photo">
+
+      <img src="/assets/images/illustration-article.svg" alt="Logo illustration">
+
+    </div>
 
   Learning
 
@@ -31,10 +40,13 @@
   These languages are the backbone of every website, defining structure, content, and presentation.
 
   Greg Hooper
-  
+
+  </main>
+
  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>. 
   </div> -->
+
 </body>
 </html>
