--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
 
   <main>
 
-    <div class="photo">
-
+    <div class="hero-photo">
       <img src="/assets/images/illustration-article.svg" alt="Logo illustration">
-
     </div>
 
-  Learning
+    <div class="container">
+      <p>Learning</p>
+      <h3>Published 21 Dec 2023</h3>
+      <h1>HTML & CSS foundations</h1>
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  Published 21 Dec 2023
+      <div class="avatar">
+        <img src="/assets/images/image-avatar.webp" alt="Greg Hooper avatar">
+        <p>Greg Hooper</p>
+      </div>
 
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+    </div>
 
   </main>
 
