--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
       <img src="/assets/images/illustration-article.svg" alt="Logo illustration">
     </div>
 
-    <div class="container">
-      <p>Learning</p>
+    <div class="text-container">
+      <div class="category">
+        <p>Learning</p>
+      </div>
       <h3>Published 21 Dec 2023</h3>
       <h1>HTML & CSS foundations</h1>
       <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
-      <div class="avatar">
-        <img src="/assets/images/image-avatar.webp" alt="Greg Hooper avatar">
-        <p>Greg Hooper</p>
-      </div>
-
     </div>
+
+    <div class="avatar">
+      <img src="/assets/images/image-avatar.webp" alt="Greg Hooper avatar">
+      <span>Greg Hooper</span>
+    </div>
+
+    
 
   </main>
 
