--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
