--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
 
     <div class="hero-photo">
-      <img src="/assets/images/illustration-article.svg" alt="Logo illustration">
+      <img src="./assets/images/illustration-article.svg" alt="Logo illustration">
     </div>
 
     <div class="text-container">
@@ -39,7 +39,7 @@
     </div>
 
     <div class="avatar">
-      <img src="/assets/images/image-avatar.webp" alt="Greg Hooper avatar">
+      <img src="./assets/images/image-avatar.webp" alt="Greg Hooper avatar">
       <span>Greg Hooper</span>
     </div>
 
